--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "particles.js": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scripts": "^5.0.1",
     "smooth-cursor": "^0.1.2",
     "tailwind-merge": "^3.1.0",
     "tailwind-variants": "^1.0.0",
